@@ -20,6 +20,12 @@ Version 414   ???
 --Fixed so that when importing authorless sprites from OXZ files, we don't
   auto-tag sprites with our authorship tag (falsely taking credit).
 
+--Fixed sprite import so that TGA files saved to disk are file-identical with
+  what was exported.  Before, we were loading the image data from the TGA data
+  in the import and then saving a new TGA file, which might not result in
+  file-identical TGAs (especially for TGA files made with another tool, or
+  generated by older Editor code).
+
 
 
 
